# docEx

./: .env.example  .gitignore  DOCUMENTATION.md  Dockerfile  LICENSE  MANIFEST.in  README.MD  main.py  pyproject.toml  requirements.txt  setup.py
app/: main.py
app/api/: endpoints.py
app/core/: config.py  logging.py
app/schemas/: extraction.py
app/services/: extraction.py
docex_serve/: __init__.py  cli.py  server.py
docex_serve/app/: main.py
docex_serve/app/api/: endpoints.py
docex_serve/app/core/: logging.py
docex_serve/app/schemas/: enums.py
docex_serve/app/services/: extraction.py
tests/: test_extraction.py
